--- a/Algorithms/ddpg/ddpg_config.json
+++ b/Algorithms/ddpg/ddpg_config.json
@@ -20,5 +20,6 @@
     "update_every": 50,
     "act_noise": 0.1,
     "max_ep_len": 200,
-    "save_freq": 1000
+    "save_freq": 10,
+    "tensorboard_logdir": "tf_logs/ddpg"
 }
