--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,9 @@ tqdm
 imageio
 argparse
 matplotlib
-pytorch-lightning==1.0.8
-pytorch-lightning-bolts==0.2.5rc1
+pytorch-lightning
+lightning-bolts
+wandb
+natsort
+pyquaternion
+opencv-python-headless
